Changelog
=========


1.0a11
------
* added izug edit menu. Import of viewlet.xml required.
  [fsprenger]

* tooltip styling
  [fsprenger]

* izug dashboard styling
  [fsprenger]
  
* Added a new generic setup profile and skin layer for izug
  [fsprenger]

* Moved tabbedview styling from opengever.css to public.css in order to use it
  in izug
  [fsprenger]

* added izug icons in test_icons, changed icon order
  [fsprenger]

* Fixed accesskeys
  [fsprenger]

* Kita-specific styling
  [fsprenger]

* No list-style in shoping cart portlet
  [fsprenger]

* Changed background color for overlays
  [fsprenger]

* Border style for special portlet on zug frontpage
  [fsprenger]

* Fixed contact form column and field widths
  [fsprenger]

* Changed zip label in join_form
  [fsprenger]

* Line-height in lebenslage_summary_view more link
  [fsprenger]

* Make sure portlets dont get a scrollbar if content is too wide
  [fsprenger]

* More space before footer
  [fsprenger]

* Refactored batching
  [fsprenger]

* Styling for nav portlet in mein konto
  [fsprenger]
  
* Make sure the right navigation background image appears in subsites
  [fsprenger]
  
* Remove heading font in print.css
  [fsprenger]

1.0a10
------

* Fixed bug where document icons appear twice in ContentTreeWidget
  Issue #1069 Test Rot 2.0.3: Fehlende Icons bei Verweis-Baum u.ae.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1069
  [lgraf]

* Fixed ftw.datepicker. Sprite-icon style caused prev / next icons to be too
  large, slight style improvements
  [fsprenger]

* moved breadcrumb-divider from zug.css to public.css
  updated icon for breadcrumbs
  fixed default table listing
  [ttschanz]

* Fixed visited links in portlet
  No underline in hovered images
  [jinfanger]

* Fixed indent of menu point
  Fixed contact form layout
  Added visited style
  Fixed text padding
  Added base.css a:hover
  Added text-decoration underline to public.css
  Added hover to gradients