@@ -2,5 +2,8 @@
 <object name="portal_css">
   <stylesheet title="" cacheable="True" compression="safe"
      conditionalcomment="" cookable="True" enabled="on" expression=""
+     id="zug.css" media="screen" rel="stylesheet" rendering="import"/>    
+  <stylesheet title="" cacheable="True" compression="safe"
+     conditionalcomment="" cookable="True" enabled="on" expression=""
      id="izug.css" media="screen" rel="stylesheet" rendering="import"/>
 </object>
