@@ -2,13 +2,17 @@
 <object name="portal_skins" allow_any="False" cookie_persistence="False"
    default_skin="iZug Base Theme">
 
+ <object name="izug_zugch"
+    meta_type="Filesystem Directory View"
+    directory="izug.basetheme:skins/izug_zugch"/>
  <object name="izug_izug"
     meta_type="Filesystem Directory View"
     directory="izug.basetheme:skins/izug_izug"/>
-
+    
  <skin-path name="iZug Base Theme" based-on="Plone Classic Theme">
   <layer name="izug_izug"
      insert-before="custom"/>
+  <layer name="izug_zugch"
+     insert-after="custom"/>
  </skin-path>
-
 </object>
