@@ -4,6 +4,10 @@ Changelog
 
 1.0a11
 ------
+* adding zug.ch skin layer (not izug profile) when importing izug.basetheme for
+  zug.ch. 'Behoerden' is styled now.
+  [fsprenger]
+
 * added izug edit menu. Import of viewlet.xml required.
   [fsprenger]
 
